tests/dataset/tpc-ds/compiler/cpp/q22.error
/tmp/TestCPPCompiler_TPCDSQueriesq221703626238/001/prog.cpp:69:8: error: redefinition of ‘struct Inventory’
   69 | struct Inventory {
      |        ^~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq221703626238/001/prog.cpp:53:8: note: previous definition of ‘struct Inventory’
   53 | struct Inventory {
      |        ^~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq221703626238/001/prog.cpp:74:8: error: redefinition of ‘struct DateDim’
   74 | struct DateDim {
      |        ^~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq221703626238/001/prog.cpp:58:8: note: previous definition of ‘struct DateDim’
   58 | struct DateDim {
      |        ^~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq221703626238/001/prog.cpp:78:8: error: redefinition of ‘struct Item’
   78 | struct Item {
      |        ^~~~
/tmp/TestCPPCompiler_TPCDSQueriesq221703626238/001/prog.cpp:62:8: note: previous definition of ‘struct Item’
   62 | struct Item {
      |        ^~~~
/tmp/TestCPPCompiler_TPCDSQueriesq221703626238/001/prog.cpp:86:12: error: ‘i’ was not declared in this scope
   86 |   decltype(i.i_product_name) product_name;
      |            ^
/tmp/TestCPPCompiler_TPCDSQueriesq221703626238/001/prog.cpp:86:12: error: ‘i’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq221703626238/001/prog.cpp:87:12: error: ‘i’ was not declared in this scope
   87 |   decltype(i.i_brand) brand;
      |            ^
/tmp/TestCPPCompiler_TPCDSQueriesq221703626238/001/prog.cpp:87:12: error: ‘i’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq221703626238/001/prog.cpp:88:12: error: ‘i’ was not declared in this scope
   88 |   decltype(i.i_class) class;
      |            ^
/tmp/TestCPPCompiler_TPCDSQueriesq221703626238/001/prog.cpp:88:12: error: ‘i’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq221703626238/001/prog.cpp:88:28: error: expected identifier before ‘;’ token
   88 |   decltype(i.i_class) class;
      |                            ^
/tmp/TestCPPCompiler_TPCDSQueriesq221703626238/001/prog.cpp:88:3: error: multiple types in one declaration
   88 |   decltype(i.i_class) class;
      |   ^~~~~~~~~~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq221703626238/001/prog.cpp:89:12: error: ‘i’ was not declared in this scope
   89 |   decltype(i.i_category) category;
      |            ^
/tmp/TestCPPCompiler_TPCDSQueriesq221703626238/001/prog.cpp:89:12: error: ‘i’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq221703626238/001/prog.cpp:92:12: error: ‘inv’ was not declared in this scope; did you mean ‘int’?
   92 |   decltype(inv) inv;
      |            ^~~
      |            int
/tmp/TestCPPCompiler_TPCDSQueriesq221703626238/001/prog.cpp:92:12: error: ‘inv’ was not declared in this scope; did you mean ‘int’?
   92 |   decltype(inv) inv;
      |            ^~~
      |            int
/tmp/TestCPPCompiler_TPCDSQueriesq221703626238/001/prog.cpp:93:12: error: ‘d’ was not declared in this scope
   93 |   decltype(d) d;
      |            ^
/tmp/TestCPPCompiler_TPCDSQueriesq221703626238/001/prog.cpp:93:12: error: ‘d’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq221703626238/001/prog.cpp:94:12: error: ‘i’ was not declared in this scope
   94 |   decltype(i) i;
      |            ^
/tmp/TestCPPCompiler_TPCDSQueriesq221703626238/001/prog.cpp:94:12: error: ‘i’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq221703626238/001/prog.cpp:111:42: error: expected unqualified-id before ‘class’
  111 |   decltype(std::declval<__struct6>().key.class) i_class;
      |                                          ^~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq221703626238/001/prog.cpp:180:13: error: redefinition of ‘void __json(const DateDim&)’
  180 | inline void __json(const DateDim &v) {
      |             ^~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq221703626238/001/prog.cpp:115:13: note: ‘void __json(const DateDim&)’ previously defined here
  115 | inline void __json(const DateDim &v) {
      |             ^~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq221703626238/001/prog.cpp:195:13: error: redefinition of ‘void __json(const Item&)’
  195 | inline void __json(const Item &v) {
      |             ^~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq221703626238/001/prog.cpp:150:13: note: ‘void __json(const Item&)’ previously defined here
  150 | inline void __json(const Item &v) {
      |             ^~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq221703626238/001/prog.cpp:255:13: error: redefinition of ‘void __json(const Inventory&)’
  255 | inline void __json(const Inventory &v) {
      |             ^~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq221703626238/001/prog.cpp:130:13: note: ‘void __json(const Inventory&)’ previously defined here
  130 | inline void __json(const Inventory &v) {
      |             ^~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq221703626238/001/prog.cpp: In function ‘void __json(const Qoh&)’:
/tmp/TestCPPCompiler_TPCDSQueriesq221703626238/001/prog.cpp:292:12: error: expected unqualified-id before ‘class’
  292 |   __json(v.class);
      |            ^~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq221703626238/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq221703626238/001/prog.cpp:342:71: error: too many initializers for ‘Qoh’
  342 |               Qoh{i.i_product_name, i.i_brand, i.i_class, i.i_category};
      |                                                                       ^
/tmp/TestCPPCompiler_TPCDSQueriesq221703626238/001/prog.cpp:346:45: error: cannot convert ‘Inventory’ to ‘int’ in initialization
  346 |               __g.items.push_back(__struct5{inv, d, i});
      |                                             ^~~
      |                                             |
      |                                             Inventory
/tmp/TestCPPCompiler_TPCDSQueriesq221703626238/001/prog.cpp:353:67: error: cannot convert ‘Inventory’ to ‘int’ in initialization
  353 |                 __struct6{__key, std::vector<__struct5>{__struct5{inv, d, i}}});
      |                                                                   ^~~
      |                                                                   |
      |                                                                   Inventory
/tmp/TestCPPCompiler_TPCDSQueriesq221703626238/001/prog.cpp:353:77: error: no matching function for call to ‘std::vector<__struct5>::vector(<brace-enclosed initializer list>)’
  353 |                 __struct6{__key, std::vector<__struct5>{__struct5{inv, d, i}}});
      |                                                                             ^
In file included from /usr/include/c++/13/vector:66,
                 from /tmp/TestCPPCompiler_TPCDSQueriesq221703626238/001/prog.cpp:6:
/usr/include/c++/13/bits/stl_vector.h:707:9: note: candidate: ‘template<class _InputIterator, class> std::vector<_Tp, _Alloc>::vector(_InputIterator, _InputIterator, const allocator_type&) [with <template-parameter-2-2> = _InputIterator; _Tp = __struct5; _Alloc = std::allocator<__struct5>]’
  707 |         vector(_InputIterator __first, _InputIterator __last,
      |         ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:707:9: note:   template argument deduction/substitution failed:
/usr/include/c++/13/bits/stl_vector.h:678:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::initializer_list<_Tp>, const allocator_type&) [with _Tp = __struct5; _Alloc = std::allocator<__struct5>; allocator_type = std::allocator<__struct5>]’
  678 |       vector(initializer_list<value_type> __l,
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:678:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:659:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, std::__type_identity_t<_Alloc>&) [with _Tp = __struct5; _Alloc = std::allocator<__struct5>; std::__type_identity_t<_Alloc> = std::allocator<__struct5>]’
  659 |       vector(vector&& __rv, const __type_identity_t<allocator_type>& __m)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:659:7: note:   candidate expects 2 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:640:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, const allocator_type&, std::false_type) [with _Tp = __struct5; _Alloc = std::allocator<__struct5>; allocator_type = std::allocator<__struct5>; std::false_type = std::integral_constant<bool, false>]’
  640 |       vector(vector&& __rv, const allocator_type& __m, false_type)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:640:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:635:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, const allocator_type&, std::true_type) [with _Tp = __struct5; _Alloc = std::allocator<__struct5>; allocator_type = std::allocator<__struct5>; std::true_type = std::integral_constant<bool, true>]’
  635 |       vector(vector&& __rv, const allocator_type& __m, true_type) noexcept
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:635:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:624:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&, std::__type_identity_t<_Alloc>&) [with _Tp = __struct5; _Alloc = std::allocator<__struct5>; std::__type_identity_t<_Alloc> = std::allocator<__struct5>]’
  624 |       vector(const vector& __x, const __type_identity_t<allocator_type>& __a)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:624:7: note:   candidate expects 2 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:620:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&) [with _Tp = __struct5; _Alloc = std::allocator<__struct5>]’
  620 |       vector(vector&&) noexcept = default;
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:620:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:601:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&) [with _Tp = __struct5; _Alloc = std::allocator<__struct5>]’
  601 |       vector(const vector& __x)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:601:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:569:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(size_type, const value_type&, const allocator_type&) [with _Tp = __struct5; _Alloc = std::allocator<__struct5>; size_type = long unsigned int; value_type = std::vector<__struct5>::value_type; allocator_type = std::allocator<__struct5>]’
  569 |       vector(size_type __n, const value_type& __value,
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:569:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:556:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(size_type, const allocator_type&) [with _Tp = __struct5; _Alloc = std::allocator<__struct5>; size_type = long unsigned int; allocator_type = std::allocator<__struct5>]’
  556 |       vector(size_type __n, const allocator_type& __a = allocator_type())
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:556:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:542:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const allocator_type&) [with _Tp = __struct5; _Alloc = std::allocator<__struct5>; allocator_type = std::allocator<__struct5>]’
  542 |       vector(const allocator_type& __a) _GLIBCXX_NOEXCEPT
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:542:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:531:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector() [with _Tp = __struct5; _Alloc = std::allocator<__struct5>]’
  531 |       vector() = default;
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:531:7: note:   candidate expects 0 arguments, 1 provided
/tmp/TestCPPCompiler_TPCDSQueriesq221703626238/001/prog.cpp:360:34: error: expected primary-expression before ‘{’ token
  360 |       __items.push_back(__struct7{
      |                                  ^
/tmp/TestCPPCompiler_TPCDSQueriesq221703626238/001/prog.cpp: In function ‘int main()’:
/tmp/TestCPPCompiler_TPCDSQueriesq221703626238/001/prog.cpp:373:5: error: conversion from ‘vector<__struct7>’ to non-scalar type ‘vector<__struct5>’ requested
  330 |   std::vector<__struct5> qoh = ([&]() {
      |                                ~~~~~~~~
  331 |     std::vector<__struct6> __groups;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  332 |     for (auto inv : inventory) {
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  333 |       for (auto d : date_dim) {
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~
  334 |         if (!((inv.inv_date_sk == d.d_date_sk)))
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  335 |           continue;
      |           ~~~~~~~~~
  336 |         for (auto i : item) {
      |         ~~~~~~~~~~~~~~~~~~~~~
  337 |           if (!((inv.inv_item_sk == i.i_item_sk)))
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  338 |             continue;
      |             ~~~~~~~~~
  339 |           if (!(((d.d_month_seq >= 0) && (d.d_month_seq <= 11))))
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  340 |             continue;
      |             ~~~~~~~~~
  341 |           auto __key =
      |           ~~~~~~~~~~~~
  342 |               Qoh{i.i_product_name, i.i_brand, i.i_class, i.i_category};
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  343 |           bool __found = false;
      |           ~~~~~~~~~~~~~~~~~~~~~
  344 |           for (auto &__g : __groups) {
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  345 |             if (__g.key == __key) {
      |             ~~~~~~~~~~~~~~~~~~~~~~~
  346 |               __g.items.push_back(__struct5{inv, d, i});
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  347 |               __found = true;
      |               ~~~~~~~~~~~~~~~
  348 |               break;
      |               ~~~~~~
  349 |             }
      |             ~
  350 |           }
      |           ~
  351 |           if (!__found) {
      |           ~~~~~~~~~~~~~~~
  352 |             __groups.push_back(
      |             ~~~~~~~~~~~~~~~~~~~
  353 |                 __struct6{__key, std::vector<__struct5>{__struct5{inv, d, i}}});
      |                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  354 |           }
      |           ~
  355 |         }
      |         ~
  356 |       }
      |       ~
  357 |     }
      |     ~
  358 |     std::vector<__struct7> __items;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  359 |     for (auto &g : __groups) {
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~
  360 |       __items.push_back(__struct7{
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  361 |           g.key.product_name, g.key.brand, g.key.class, g.key.category,
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  362 |           __avg(([&]() {
      |           ~~~~~~~~~~~~~~
  363 |             std::vector<
      |             ~~~~~~~~~~~~
  364 |                 decltype(std::declval<__struct5>().inv_quantity_on_hand)>
      |                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  365 |                 __items;
      |                 ~~~~~~~~
  366 |             for (auto x : g.items) {
      |             ~~~~~~~~~~~~~~~~~~~~~~~~
  367 |               __items.push_back(x.inv_quantity_on_hand);
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  368 |             }
      |             ~
  369 |             return __items;
      |             ~~~~~~~~~~~~~~~
  370 |           })())});
      |           ~~~~~~~~
  371 |     }
      |     ~
  372 |     return __items;
      |     ~~~~~~~~~~~~~~~
  373 |   })();
      |   ~~^~
